--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^2.3.1",
+    "sweetalert2": "^11.10.1",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
   },
